# This version tag is used in building "cvstag.h" for version identification.

2011-08-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-83:
	  hacprsim, hacchpsim: added 'precision' command to control
		output precision of real-numbers to stdout.
		Added 1 test case.  Documented.


2011-07-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-05:
	  hacprsim: defaulting to keeper-check-fail ignore
		because too much regression test noise.
		Fixed evaluation of floating nodes, to consider
		fanout candidates (of the node that just switched).
		Test cases updated and added.


2011-07-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-04:
	  Texinfo fixes for recently added commands.
	  hacprsim: new command 'feedback' and 'feedback-get'
		to print nodes in the feedback set (current value)
		debugged node_fanout misuse of invalid rule
		Added one test case.


2011-07-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-03:
	  rebase master (-main-00-84-82)
	  hacprsim: added keeper-check-fail policy command
	  State-prsim.cc: implemented dump_node_feedback.


2011-07-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-82:
	  Added -get variants to many commands that list nodes.
	  Wrote re-usable functions to print optional values of nodes.  
	  Test cases added.


2011-07-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-02:
	  hacprsim: added commands to query fanin/fanout as a simple
		list of nodes, also feedback as the set intersection
		of fanin and fanout.  No commands to test these yet.


2011-07-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-84-81-prsim-keeper-check-01:
	  Added copy of ExprAllocFlags to PRSIM::State.
	  Added new error handling policy for keeper-checks.  