@@ -1,22 +1,20 @@
-# "cbit-11.prsimrc"
-# copy-modified from "cbit-10.prsimrc"
+# "cbit-09c.prsimrc"
+# copy-modified from "cbit-09.prsimrc"
 # @haco@ cbit.haco-c
+# @hacprsim-flags@ -f fast-weak-keepers
 # testing feedback keeper checks
 
 # mode
-keeper-check-fail warn
 weak-rules on
 # by default
 watchall
 watchall-queue
 
 set wl 0
-step-event
-assertn-queue
+cycle
 
 set p.f 1
 step-event
 queue
 cycle
-
 
