@@ -1,6 +1,4 @@
 enqueued:	0	wl : 0
-Warning: node bl is floating without pending feedback. 
-Warning: node _bl is floating without pending feedback. 
 	0	wl : 0
 enqueued:	0	p.f : 1
 enqueued:	10	p.t : 0	[from p.f:=1]	(weak)
