@@ -1,4 +1,6 @@
 enqueued:	0	wl : 0
+Warning: node bl is floating without pending feedback.  (fast-weak-keepers disabled)
+Warning: node _bl is floating without pending feedback.  (fast-weak-keepers disabled)
 	0	wl : 0
 enqueued:	0	p.f : 1
 enqueued:	10	p.t : 0	[from p.f:=1]	(weak)
