@@ -1,0 +1,30 @@
+# "celem-keeper-03.prsimrc"
+# copy-modified from "celem-keeper-01.prsimrc"
+# @haco@ celem-keeper.haco-c
+# testing keeper checks
+
+keeper-check-fail warn
+# timing uniform
+# weak-rules off
+feedback Z._c
+fanin Z._c
+watchall
+watchall-queue
+set a 0
+set b 0
+cycle
+
+set a 1
+cycle
+status-driven-fanin 0
+
+set b 1
+cycle
+
+set a 0
+cycle
+status-driven-fanin 0
+
+set b 0
+cycle
+
